Add new party command /party rename

--- a/src/main/resources/locale/locale_cs_CZ.properties
+++ b/src/main/resources/locale/locale_cs_CZ.properties
@@ -398,6 +398,7 @@ Commands.Party.Invite.1=[[YELLOW]]Napis [[GREEN]]/party accept[[YELLOW]] pro pot
 Commands.Party.Invite=<player> [[RED]]- Poslat pozv\u00e1nku do party
 Commands.Party.Join=[[GRAY]]Pripojen do party: {0}
 Commands.Party.Create=[[GRAY]]Created Party: {0}
+Commands.Party.Rename=[[GRAY]]Party name changed to: [[WHITE]]{0}
 Commands.Party.AlreadyExists=[[DARK_RED]]Party {0} already exists!
 Commands.Party.Kick=[[RED]]Byl jsi vyhozen z party {0}!
 Commands.Party.Leave=[[RED]]Opustil jsi party
@@ -446,6 +447,7 @@ Party.Help.7=[[RED]]To transfer ownership of your party, use [[DARK_AQUA]]/party
 Party.Help.8=[[RED]]To disband your party, use [[DARK_AQUA]]/party disband
 Party.InformedOnJoin={0} [[GREEN]] se p\u0159ipojil k va\u0161\u00ed skupin\u011b
 Party.InformedOnQuit={0} [[GREEN]] opustil party
+Party.InformedOnNameChange=[[GOLD]]{0} [[GREEN]]has set the party name to [[WHITE]]{1}
 Party.InvalidName=[[DARK_RED]]Toto nen\u00ed mo\u017en\u00e9 jm\u00e9no pro partu.
 Party.IsLocked=[[RED]]Tahla parta je ji\u017e uzamknuta!
 Party.IsntLocked=[[RED]]Tato parta je zamknuta!
