--- a/src/main/resources/locale/locale_da.properties
+++ b/src/main/resources/locale/locale_da.properties
@@ -398,6 +398,7 @@ Commands.Party.Invite.1=[[YELLOW]]Skrive [[GREEN]]/party accept[[YELLOW]] for at
 Commands.Party.Invite=<player> [[RED]]- Send gruppe invitation
 Commands.Party.Join=[[GRAY]]Joinede Gruppen: {0}
 Commands.Party.Create=[[GRAY]]Created Party: {0}
+Commands.Party.Rename=[[GRAY]]Party name changed to: [[WHITE]]{0}
 Commands.Party.AlreadyExists=[[DARK_RED]]Party {0} already exists!
 Commands.Party.Kick=[[RED]]Du er blevet fjernet fra gruppen {0}!
 Commands.Party.Leave=[[RED]]Du har forladt denne gruppe
@@ -446,6 +447,7 @@ Party.Help.7=[[RED]]To transfer ownership of your party, use [[DARK_AQUA]]/party
 Party.Help.8=[[RED]]To disband your party, use [[DARK_AQUA]]/party disband
 Party.InformedOnJoin={0} [[GREEN]] er nu med i din gruppe
 Party.InformedOnQuit={0} [[GREEN]] har forladt din gruppe
+Party.InformedOnNameChange=[[GOLD]]{0} [[GREEN]]has set the party name to [[WHITE]]{1}
 Party.InvalidName=[[DARK_RED]]Dette er ikke et gruppe navn.
 Party.IsLocked=[[RED]]Denne gruppe er allerede l\u00e5st!
 Party.IsntLocked=[[RED]]Denne gruppe er ikke l\u00e5st!
