--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -398,6 +398,7 @@ Commands.Party.Invite.1=[[YELLOW]]Schreibe [[GREEN]]/party accept[[YELLOW]] um d
 Commands.Party.Invite=<Spieler> [[RED]]- Gruppen-Einladung versenden
 Commands.Party.Join=[[GRAY]]Beigetretene Gruppe: {0}
 Commands.Party.Create=[[GRAY]]Created Party: {0}
+Commands.Party.Rename=[[GRAY]]Party name changed to: [[WHITE]]{0}
 Commands.Party.AlreadyExists=[[DARK_RED]]Party {0} already exists!
 Commands.Party.Kick=[[RED]]Du wurdest von folgender Gruppe gekickt: {0}!
 Commands.Party.Leave=[[RED]]Du hast diese Gruppe verlassen
@@ -446,6 +447,7 @@ Party.Help.7=[[RED]]To transfer ownership of your party, use [[DARK_AQUA]]/party
 Party.Help.8=[[RED]]To disband your party, use [[DARK_AQUA]]/party disband
 Party.InformedOnJoin={0} [[GREEN]] ist der Gruppe beigetreten
 Party.InformedOnQuit={0} [[GREEN]] hat die Gruppe verlassen
+Party.InformedOnNameChange=[[GOLD]]{0} [[GREEN]]has set the party name to [[WHITE]]{1}
 Party.InvalidName=[[DARK_RED]]Dies ist kein g\u00fcltiger Gruppen-Name.
 Party.IsLocked=[[RED]]Diese Gruppe ist bereits gesperrt!
 Party.IsntLocked=[[RED]]Diese Gruppe ist NICHT gesperrt!
