--- a/src/main/resources/locale/locale_es.properties
+++ b/src/main/resources/locale/locale_es.properties
@@ -398,6 +398,7 @@ Commands.Party.Invite.1=[[YELLOW]]Ingresa [[GREEN]]/party accept[[YELLOW]] para 
 Commands.Party.Invite=<jugador> [[RED]]- Enviar invitaci\u00f3n al grupo
 Commands.Party.Join=[[GRAY]]Se uni\u00f3 al grupo: {0}
 Commands.Party.Create=[[GRAY]]Created Party: {0}
+Commands.Party.Rename=[[GRAY]]Party name changed to: [[WHITE]]{0}
 Commands.Party.AlreadyExists=[[DARK_RED]]Party {0} already exists!
 Commands.Party.Kick=[[RED]]\u00a1Fuiste expulsado del grupo {0}!
 Commands.Party.Leave=[[RED]]Abandonaste el grupo
@@ -446,6 +447,7 @@ Party.Help.7=[[RED]]To transfer ownership of your party, use [[DARK_AQUA]]/party
 Party.Help.8=[[RED]]To disband your party, use [[DARK_AQUA]]/party disband
 Party.InformedOnJoin={0} [[GREEN]] ha entrado a tu fiesta
 Party.InformedOnQuit={0} [[GREEN]]abandon\u00f3 el grupo
+Party.InformedOnNameChange=[[GOLD]]{0} [[GREEN]]has set the party name to [[WHITE]]{1}
 Party.InvalidName=[[DARK_RED]]Ese no es un nombre de grupo v\u00e1lido.
 Party.IsLocked=[[RED]]\u00a1Este grupo ya est\u00e1 bloqueado!
 Party.IsntLocked=[[RED]]\u00a1Este grupo no est\u00e1 bloqueado!
