--- a/src/main/resources/locale/locale_fr.properties
+++ b/src/main/resources/locale/locale_fr.properties
@@ -398,6 +398,7 @@ Commands.Party.Invite.1=[[YELLOW]]Faites [[GREEN]]/party accept[[YELLOW]] pour a
 Commands.Party.Invite=<nom> [[RED]]- Envoyer une invitation
 Commands.Party.Join=[[GRAY]]Rejoint le groupe: {0}
 Commands.Party.Create=[[GRAY]]Created Party: {0}
+Commands.Party.Rename=[[GRAY]]Party name changed to: [[WHITE]]{0}
 Commands.Party.AlreadyExists=[[DARK_RED]]Party {0} already exists!
 Commands.Party.Kick=[[RED]]Vous avez \u00e9t\u00e9 \u00e9ject\u00e9 du groupe {0} !
 Commands.Party.Leave=[[RED]]Vous avez quitt\u00e9 le groupe
@@ -446,6 +447,7 @@ Party.Help.7=[[RED]]To transfer ownership of your party, use [[DARK_AQUA]]/party
 Party.Help.8=[[RED]]To disband your party, use [[DARK_AQUA]]/party disband
 Party.InformedOnJoin={0} [[GREEN]] a rejoint votre groupe
 Party.InformedOnQuit={0} [[GREEN]] a quitt\u00e9 votre groupe
+Party.InformedOnNameChange=[[GOLD]]{0} [[GREEN]]has set the party name to [[WHITE]]{1}
 Party.InvalidName=[[DARK_RED]]Ce groupe n\'existe pas.
 Party.IsLocked=[[RED]]Ce groupe est d\u00e9j\u00e0 verrouill\u00e9 !
 Party.IsntLocked=[[RED]]Ce groupe n\'est pas verrouill\u00e9 !
