--- a/src/main/resources/locale/locale_it.properties
+++ b/src/main/resources/locale/locale_it.properties
@@ -398,6 +398,7 @@ Commands.Party.Invite.1=[[YELLOW]]Digita [[GREEN]]/party accept[[YELLOW]] per ac
 Commands.Party.Invite=<giocatore> [[RED]]- Manda un invito nella compagnia
 Commands.Party.Join=[[GRAY]]Ti sei unito alla Compagnia: {0}
 Commands.Party.Create=[[GRAY]]Created Party: {0}
+Commands.Party.Rename=[[GRAY]]Party name changed to: [[WHITE]]{0}
 Commands.Party.AlreadyExists=[[DARK_RED]]Party {0} already exists!
 Commands.Party.Kick=[[RED]]Sei stato sospeso dalla tua compagnia {0}!
 Commands.Party.Leave=[[RED]]Hai abbandonato quella compagnia
@@ -446,6 +447,7 @@ Party.Help.7=[[RED]]To transfer ownership of your party, use [[DARK_AQUA]]/party
 Party.Help.8=[[RED]]To disband your party, use [[DARK_AQUA]]/party disband
 Party.InformedOnJoin={0} [[GREEN]] si \u00e8 unito alla tua compagnia
 Party.InformedOnQuit={0} [[GREEN]] ha lasciato la tua compagnia
+Party.InformedOnNameChange=[[GOLD]]{0} [[GREEN]]has set the party name to [[WHITE]]{1}
 Party.InvalidName=[[DARK_RED]]Questo non \u00e8 un nome di compagnia valido.
 Party.IsLocked=[[RED]]Questa compagnia \u00e8 gi\u00e0 chiusa!
 Party.IsntLocked=[[RED]]Questa compagnia non \u00e8 chiusa!
