--- a/src/main/resources/locale/locale_nl.properties
+++ b/src/main/resources/locale/locale_nl.properties
@@ -398,6 +398,7 @@ Commands.Party.Invite.1=[[YELLOW]]Typ [[GREEN]]/party accept[[YELLOW]] om de uit
 Commands.Party.Invite=<player> [[RED]]- Stuur een groep uitnodiging
 Commands.Party.Join=[[GRAY]]Groep betreden: {0}
 Commands.Party.Create=[[GRAY]]Groep aangemaakt: {0}
+Commands.Party.Rename=[[GRAY]]Groep naam veranderd naar: [[WHITE]]{0}
 Commands.Party.AlreadyExists=[[DARK_RED]]Groep {0} bestaat al!
 Commands.Party.Kick=[[RED]]Je bent verwijderd uit de groep {0}!
 Commands.Party.Leave=[[RED]]Je hebt de groep verlaten
@@ -446,6 +447,7 @@ Party.Help.7=[[RED]]To transfer ownership of your party, use [[DARK_AQUA]]/party
 Party.Help.8=[[RED]]To disband your party, use [[DARK_AQUA]]/party disband
 Party.InformedOnJoin={0} [[GREEN]] is tot je groep toegetreden
 Party.InformedOnQuit={0} [[GREEN]] heeft je groep verlaten
+Party.InformedOnNameChange=[[GOLD]]{0} [[GREEN]]heeft de groeps naam veranderd naar [[WHITE]]{1}
 Party.InvalidName=[[DARK_RED]]That is not a valid party name.
 Party.IsLocked=[[RED]]This party is already locked!
 Party.IsntLocked=[[RED]]This party is not locked!
