--- a/src/main/resources/locale/locale_pl.properties
+++ b/src/main/resources/locale/locale_pl.properties
@@ -398,6 +398,7 @@ Commands.Party.Invite.1=[[YELLOW]]Napisz [[GREEN]]/party accept[[YELLOW]] aby za
 Commands.Party.Invite=<player> [[RED]]- Send party invite
 Commands.Party.Join=[[GRAY]]Dolaczyles do Grupy: {0}
 Commands.Party.Create=[[GRAY]]Created Party: {0}
+Commands.Party.Rename=[[GRAY]]Party name changed to: [[WHITE]]{0}
 Commands.Party.AlreadyExists=[[DARK_RED]]Party {0} already exists!
 Commands.Party.Kick=[[RED]]Zosta\u0142e\u015b wyrzucony z dru\u017cyny {0}!
 Commands.Party.Leave=[[RED]]Opusciles grupe
@@ -446,6 +447,7 @@ Party.Help.7=[[RED]]To transfer ownership of your party, use [[DARK_AQUA]]/party
 Party.Help.8=[[RED]]To disband your party, use [[DARK_AQUA]]/party disband
 Party.InformedOnJoin={0} [[GREEN]] dolaczyl do twojej grupy.
 Party.InformedOnQuit={0} [[GREEN]] wyszedl z twojej grupy.
+Party.InformedOnNameChange=[[GOLD]]{0} [[GREEN]]has set the party name to [[WHITE]]{1}
 Party.InvalidName=[[DARK_RED]]That is not a valid party name.
 Party.IsLocked=[[RED]]Ta grupa jest juz zamknieta!
 Party.IsntLocked=[[RED]]This party is not locked!
