--- a/src/main/resources/locale/locale_zh_CN.properties
+++ b/src/main/resources/locale/locale_zh_CN.properties
@@ -398,6 +398,7 @@ Commands.Party.Invite.1=[[YELLOW]]\u8f93\u5165 [[GREEN]]/party accept[[YELLOW]] 
 Commands.Party.Invite=<player> [[RED]]- \u53d1\u9001\u961f\u4f0d\u9080\u8bf7
 Commands.Party.Join=[[GRAY]]\u52a0\u5165\u961f\u4f0d: {0}
 Commands.Party.Create=[[GRAY]]Created Party: {0}
+Commands.Party.Rename=[[GRAY]]Party name changed to: [[WHITE]]{0}
 Commands.Party.AlreadyExists=[[DARK_RED]]Party {0} already exists!
 Commands.Party.Kick=[[RED]]\u4f60\u5df2\u88ab {0} \u8e22\u51fa!
 Commands.Party.Leave=[[RED]]\u4f60\u79bb\u5f00\u4e86\u8fd9\u652f\u961f\u4f0d
@@ -446,6 +447,7 @@ Party.Help.7=[[RED]]To transfer ownership of your party, use [[DARK_AQUA]]/party
 Party.Help.8=[[RED]]To disband your party, use [[DARK_AQUA]]/party disband
 Party.InformedOnJoin={0} [[GREEN]] \u52a0\u5165\u4e86\u961f\u4f0d
 Party.InformedOnQuit={0} [[GREEN]] \u5df2\u7ecf\u79bb\u5f00\u4e86\u8fd9\u652f\u961f\u4f0d
+Party.InformedOnNameChange=[[GOLD]]{0} [[GREEN]]has set the party name to [[WHITE]]{1}
 Party.InvalidName=[[DARK_RED]]\u90a3\u4e0d\u662f\u4e00\u4e2a\u6709\u6548\u7684\u961f\u4f0d\u540d\u5b57.
 Party.IsLocked=[[RED]]\u8fd9\u4e2a\u961f\u4f0d\u5df2\u7ecf\u9501\u5b9a!
 Party.IsntLocked=[[RED]]\u8fd9\u4e2a\u961f\u4f0d\u5e76\u6ca1\u6709\u9501\u5b9a!
