Changed Excavation to have individual XP values for each block type, rather than a base XP value

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -37,6 +37,7 @@ Version 1.4.00-dev
  ! Major refactoring - please take note, this WILL break any mcMMO-related plugin not properly hooking into the API.
  ! Changed the way party commands work, use /party ? to check how to use the new commands
  ! Changed McMMOChatEvent to contain the plugin that the event originated from.
+ ! Changed Excavation to have individual XP values for each block type, rather than a base XP value.
 
 Version 1.3.14
  + Added new Hylian Luck skill to Herbalism.
