--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -409,6 +409,14 @@ Commands.Party.Quit=[[RED]]- Verlasse deine derzeitige Gruppe
 Commands.Party.Teleport=<Spieler> [[RED]]- Zu Gruppen-Mitglied teleportieren
 Commands.Party.Toggle=[[RED]]- Gruppen-Chat umschalten
 Commands.Party=<party-name> [[RED]]- Gew\u00fcnschte Gruppe Er\u00f6ffnen/Beitreten
+Commands.ptp.Enabled=Party teleporting [[GREEN]]enabled
+Commands.ptp.Disabled=Party teleporting [[RED]]disabled
+Commands.ptp.NoRequests=[[RED]]You have no teleport requests at this time
+Commands.ptp.Request1=[[YELLOW]]{0} [[GREEN]]has requested to teleport to you. 
+Commands.ptp.Request2=[[GREEN]]To teleport, type [[YELLOW]]/ptp accept. [[GREEN]]Request expires in [[RED]]{0} [[GREEN]]seconds.
+Commands.ptp.AcceptAny.Enabled=Party teleport request confirmation [[GREEN]]enabled
+Commands.ptp.AcceptAny.Disabled=Party teleport request confirmation [[RED]]disabled
+Commands.ptp.RequestExpired=[[RED]]Party teleport request has expired!
 Commands.PowerLevel.Leaderboard=[[YELLOW]]--mcMMO[[BLUE]] Kraft Level [[YELLOW]]Rangliste--
 Commands.PowerLevel.Capped=[[DARK_RED]]POWER LEVEL: [[GREEN]]{0} [[DARK_RED]]MAX LEVEL: [[YELLOW]]{1}
 Commands.PowerLevel=[[DARK_RED]]KRAFT LEVEL: [[GREEN]]{0}
