--- a/src/main/resources/locale/locale_es.properties
+++ b/src/main/resources/locale/locale_es.properties
@@ -409,6 +409,14 @@ Commands.Party.Quit=[[RED]]- Abandona tu grupo actual
 Commands.Party.Teleport=<jugador> [[RED]]- Teletransportarse al miembro del grupo
 Commands.Party.Toggle=[[RED]]- Alternar chat de grupo
 Commands.Party=<nombre del grupo> [[RED]]- Crear/Unirse al grupo elegido
+Commands.ptp.Enabled=Party teleporting [[GREEN]]enabled
+Commands.ptp.Disabled=Party teleporting [[RED]]disabled
+Commands.ptp.NoRequests=[[RED]]You have no teleport requests at this time
+Commands.ptp.Request1=[[YELLOW]]{0} [[GREEN]]has requested to teleport to you. 
+Commands.ptp.Request2=[[GREEN]]To teleport, type [[YELLOW]]/ptp accept. [[GREEN]]Request expires in [[RED]]{0} [[GREEN]]seconds.
+Commands.ptp.AcceptAny.Enabled=Party teleport request confirmation [[GREEN]]enabled
+Commands.ptp.AcceptAny.Disabled=Party teleport request confirmation [[RED]]disabled
+Commands.ptp.RequestExpired=[[RED]]Party teleport request has expired!
 Commands.PowerLevel.Leaderboard=[[YELLOW]]--mcMMO-- Tabla de L\u00edderes: [[BLUE]]Nivel de Poder
 Commands.PowerLevel.Capped=[[DARK_RED]]POWER LEVEL: [[GREEN]]{0} [[DARK_RED]]MAX LEVEL: [[YELLOW]]{1}
 Commands.PowerLevel=[[DARK_RED]]NIVEL DE PODER: [[GREEN]]{0}
