--- a/src/main/resources/locale/locale_fr.properties
+++ b/src/main/resources/locale/locale_fr.properties
@@ -409,6 +409,14 @@ Commands.Party.Quit=[[RED]]- Quitte votre groupe actuel
 Commands.Party.Teleport=<nom> [[RED]]- T\u00e9l\u00e9porte sur un membre du groupe
 Commands.Party.Toggle=[[RED]]- Active / d\u00e9sactive le canal groupe
 Commands.Party=<nom> [[RED]]- Cr\u00e9e ou rejoint ce groupe
+Commands.ptp.Enabled=Party teleporting [[GREEN]]enabled
+Commands.ptp.Disabled=Party teleporting [[RED]]disabled
+Commands.ptp.NoRequests=[[RED]]You have no teleport requests at this time
+Commands.ptp.Request1=[[YELLOW]]{0} [[GREEN]]has requested to teleport to you. 
+Commands.ptp.Request2=[[GREEN]]To teleport, type [[YELLOW]]/ptp accept. [[GREEN]]Request expires in [[RED]]{0} [[GREEN]]seconds.
+Commands.ptp.AcceptAny.Enabled=Party teleport request confirmation [[GREEN]]enabled
+Commands.ptp.AcceptAny.Disabled=Party teleport request confirmation [[RED]]disabled
+Commands.ptp.RequestExpired=[[RED]]Party teleport request has expired!
 Commands.PowerLevel.Leaderboard=[[YELLOW]]--Classement mcMMO ([[BLUE]]Niveau Global[[YELLOW]])--
 Commands.PowerLevel.Capped=[[DARK_RED]]POWER LEVEL: [[GREEN]]{0} [[DARK_RED]]MAX LEVEL: [[YELLOW]]{1}
 Commands.PowerLevel=[[DARK_RED]]NIVEAU GLOBAL : [[GREEN]]{0}
