Update the locale files with recent /ptp command changes

--- a/src/main/resources/locale/locale_da.properties
+++ b/src/main/resources/locale/locale_da.properties
@@ -476,6 +476,7 @@ Party.Teleport.Hurt=[[RED]]You\'\'ve been hurt in the last {0} seconds and cannn
 Party.Teleport.Player=[[GREEN]]Du har teleporteret til {0}.
 Party.Teleport.Self=[[RED]]Du kan ikke teleportere dig selv!
 Party.Teleport.Target=[[GREEN]]{0} har teleporteret til dig.
+Party.Teleport.Disabled=[[RED]]{0} doesn't allow party teleportation.
 Party.Unlocked=[[GRAY]]Gruppe er \u00e5ben
 Party.Disband=[[GRAY]]The party has been disbanded
 Party.Status.Locked=[[DARK_RED]](INVITE-ONLY)
