--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -476,6 +476,7 @@ Party.Teleport.Hurt=[[RED]]Du wurdest in den letzten {0} Sekunden verletzt und k
 Party.Teleport.Player=[[GREEN]]Du wurdest zu {0} teleportiert.
 Party.Teleport.Self=[[RED]]You can\'t teleport to yourself!
 Party.Teleport.Target=[[GREEN]]{0} hat sich zu dir teleportiert.
+Party.Teleport.Disabled=[[RED]]{0} doesn't allow party teleportation.
 Party.Unlocked=[[AQUA]]Gruppe entsperrt
 Party.Disband=[[GRAY]]The party has been disbanded
 Party.Status.Locked=[[DARK_RED]](INVITE-ONLY)
