--- a/src/main/resources/locale/locale_it.properties
+++ b/src/main/resources/locale/locale_it.properties
@@ -476,6 +476,7 @@ Party.Teleport.Hurt=[[RED]]Sei rimasto ferito negli ultimi {0} secondi e non puo
 Party.Teleport.Player=[[GREEN]]Ti sei teletrasportato da {0}.
 Party.Teleport.Self=[[RED]]Non puoi teletrasportarti verso te stesso!
 Party.Teleport.Target=[[GREEN]]{0} ti ha teletrasportato.
+Party.Teleport.Disabled=[[RED]]{0} doesn't allow party teleportation.
 Party.Unlocked=[[GRAY]]Party sbloccato.
 Party.Disband=[[GRAY]]The party has been disbanded
 Party.Status.Locked=[[DARK_RED]](INVITE-ONLY)
