--- a/src/main/resources/locale/locale_ko.properties
+++ b/src/main/resources/locale/locale_ko.properties
@@ -476,6 +476,7 @@ Party.Teleport.Hurt=[[RED]]You\'\'ve been hurt in the last {0} seconds and cannn
 Party.Teleport.Player=[[GREEN]]You have teleported to {0}.
 Party.Teleport.Self=[[RED]]You can\'t teleport to yourself!
 Party.Teleport.Target=[[\ub179\uc0c9]] {0} \ub2f9\uc2e0\uc5d0\uac8c \uc21c\uac04 \uc774\ub3d9\ud588\uc2b5\ub2c8\ub2e4.
+Party.Teleport.Disabled=[[RED]]{0} doesn't allow party teleportation.
 Party.Unlocked=[[\ud68c\uc0c9]] \ud30c\ud2f0\ub294 \uc7a0\uae08 \ud574\uc81c
 Party.Disband=[[GRAY]]The party has been disbanded
 Party.Status.Locked=[[DARK_RED]](INVITE-ONLY)
