--- a/src/main/resources/locale/locale_pt_BR.properties
+++ b/src/main/resources/locale/locale_pt_BR.properties
@@ -476,6 +476,7 @@ Party.Teleport.Hurt=[[RED]]You\'\'ve been hurt in the last {0} seconds and cannn
 Party.Teleport.Player=[[GREEN]]You have teleported to {0}.
 Party.Teleport.Self=[[RED]]You can\'t teleport to yourself!
 Party.Teleport.Target=[[GREEN]]{0} has teleported to you.
+Party.Teleport.Disabled=[[RED]]{0} doesn't allow party teleportation.
 Party.Unlocked=[[GRAY]]Equipe foi Destrancada
 Party.Disband=[[GRAY]]The party has been disbanded
 Party.Status.Locked=[[DARK_RED]](INVITE-ONLY)
