--- a/src/main/resources/locale/locale_zh_CN.properties
+++ b/src/main/resources/locale/locale_zh_CN.properties
@@ -476,6 +476,7 @@ Party.Teleport.Hurt=[[RED]]\u4f60\u5728\u8fc7\u53bb\u7684 {0} \u79d2\u5185\u88ab
 Party.Teleport.Player=[[GREEN]]\u4f60\u5df2\u7ecf\u4f20\u9001\u5230 {0}.
 Party.Teleport.Self=[[RED]]\u4f60\u4e0d\u80fd\u4f20\u9001\u5230\u4f60\u81ea\u5df1\u90a3\u91cc!
 Party.Teleport.Target=[[GREEN]]{0} \u5df2\u7ecf\u4f20\u9001\u5230\u4f60\u8eab\u8fb9.
+Party.Teleport.Disabled=[[RED]]{0} doesn't allow party teleportation.
 Party.Unlocked=[[GRAY]]\u961f\u4f0d\u5df2\u89e3\u9501
 Party.Disband=[[GRAY]]The party has been disbanded
 Party.Status.Locked=[[DARK_RED]](INVITE-ONLY)
