--- a/src/main/resources/locale/locale_es.properties
+++ b/src/main/resources/locale/locale_es.properties
@@ -476,6 +476,7 @@ Party.Teleport.Hurt=[[RED]]You\'\'ve been hurt in the last {0} seconds and cannn
 Party.Teleport.Player=[[GREEN]]Te teletransportaste a {0}.
 Party.Teleport.Self=[[RED]]You can\'t teleport to yourself!
 Party.Teleport.Target=[[GREEN]]{0} se teletransport\u00f3 a ti.
+Party.Teleport.Disabled=[[RED]]{0} doesn't allow party teleportation.
 Party.Unlocked=[[GRAY]]El grupo est\u00e1 desbloqueado
 Party.Disband=[[GRAY]]The party has been disbanded
 Party.Status.Locked=[[DARK_RED]](INVITE-ONLY)
